--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office hours**: M 4pm in FA 220e         
 **Course Website**: [https://kevintshoemaker.github.io/NRES-470/](https://kevintshoemaker.github.io/NRES-470/) 	    
  
-**Teaching Assistant** Sage Ellis         
+**Teaching Assistant** Sage Ellis (sageellis_at_nevada_dot_unr_dot_edu)        
 **TA Office hours**: TBD       
 
 ### Course Meeting Times
